After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685579 - gpk-update-viewer segmentation fault
gpk-update-viewer segmentation fault
Status: RESOLVED FIXED
Product: gnome-packagekit
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-packagekit-maint
gnome-packagekit-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-05 20:03 UTC by mattias.ohlsson
Modified: 2013-07-27 02:26 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description mattias.ohlsson 2012-10-05 20:03:20 UTC
I cant use gpk-update-viewer (gnome-packagekit-3.4.2-1.fc17.i686) in my Fedora 17 based OS. Everything else works (yum, YumEx and Add/Remove Software).


-- Version
$ gpk-update-viewer --version
3.4.2


-- Console output
$ gpk-update-viewer -v
15:50:07    GnomePackageKit     Verbose debugging enabled (on console 1)
15:50:07    GnomePackageKit     using native mode: 700x1200
15:50:07    GnomePackageKit     wrap_width is impossibly small -200
15:50:07    GnomePackageKit     wrap_width is impossibly small -200
15:50:07    GnomePackageKit     wrap_width is impossibly small -200
15:50:08    GnomePackageKit     only showing newest updates
15:50:08    GnomePackageKit     no last package
15:50:08    GnomePackageKit     status wait
15:50:08    GnomePackageKit     wrap_width is impossibly small -200
15:50:08    GnomePackageKit     status setup
15:50:08    GnomePackageKit     wrap_width is impossibly small -200
15:50:08    GnomePackageKit     no last package
15:50:08    GnomePackageKit     status wait
15:50:10    GnomePackageKit     status query
15:50:10    GnomePackageKit     status finished
15:50:10    GnomePackageKit     network status is online
Segmentation fault (core dumped)

-- GDB output
$ gdb gpk-update-viewer 
GNU gdb (GDB) Fedora (7.4.50.20120120-50.fc17)
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "i686-redhat-linux-gnu".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from /usr/bin/gpk-update-viewer...Reading symbols from /usr/lib/debug/usr/bin/gpk-update-viewer.debug...done.
done.
(gdb) run
Starting program: /usr/bin/gpk-update-viewer 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/libthread_db.so.1".
[New Thread 0xb662ab40 (LWP 1245)]
[New Thread 0xb5cffb40 (LWP 1246)]
[New Thread 0xb52ffb40 (LWP 1247)]

Program received signal SIGSEGV, Segmentation fault.
0x0805306c in gpk_update_viewer_reconsider_info () at gpk-update-viewer.c:1466
1466        len = update_array->len;
(gdb) thread apply all bt

Thread 1 (Thread 0xb69d2880 (LWP 1242))

  • #0 gpk_update_viewer_reconsider_info
    at gpk-update-viewer.c line 1466
  • #1 gpk_update_viewer_get_distro_upgrades_cb
    at gpk-update-viewer.c line 3078
  • #2 g_simple_async_result_complete
    at gsimpleasyncresult.c line 767
  • #3 complete_in_idle_cb
    at gsimpleasyncresult.c line 779
  • #4 g_idle_dispatch
    at gmain.c line 4657
  • #5 g_main_dispatch
    at gmain.c line 2539
  • #6 g_main_context_dispatch
    at gmain.c line 3075
  • #7 g_main_context_iterate
    at gmain.c line 3146
  • #8 g_main_context_iteration
    at gmain.c line 3207
  • #9 g_application_run
    at gapplication.c line 1499
  • #10 main
    at gpk-update-viewer.c line 3394


It works if I build my OS and use fedora-release (rpm repo and release files) instead of iprediaos-release. 
It does not work if I build Fedora 17 (fedora-livecd-desktop.ks) and include iprediaos-release instead of fedora-release. 

iprediaos-release source: https://github.com/mattias-ohlsson/iprediaos-release/
Comment 1 Richard Hughes 2012-10-05 21:36:28 UTC
commit a547582193fcee431786a73c3967411b98fd9bde
Author: Richard Hughes <richard@hughsie.com>
Date:   Fri Oct 5 22:38:35 2012 +0100

    Fix a segfault when there is a distribution upgrade available
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=685579
Comment 2 mattias.ohlsson 2012-10-06 18:29:14 UTC
(In reply to comment #1)
Same problem in gpk-update-viewer 3.7.1

$ gpk-update-viewer -v
14:18:37	GnomePackageKit     Verbose debugging enabled (on console 1)
14:18:37	GnomePackageKit     using native mode: 700x1200
14:18:37	GnomePackageKit     wrap_width is impossibly small -200
14:18:37	GnomePackageKit     wrap_width is impossibly small -200
14:18:37	GnomePackageKit     only showing newest updates
14:18:37	GnomePackageKit     wrap_width is impossibly small -200
14:18:38	GnomePackageKit     status wait
14:18:38	GnomePackageKit     wrap_width is impossibly small -200
14:18:38	GnomePackageKit     status setup
14:18:38	GnomePackageKit     wrap_width is impossibly small -200
14:18:38	GnomePackageKit     status wait
14:18:39	GnomePackageKit     status query
14:18:39	GnomePackageKit     status finished
14:18:39	GnomePackageKit     network status is online
Segmentation fault (core dumped)


$ gdb gpk-update-viewer
GNU gdb (GDB) Fedora (7.4.50.20120120-50.fc17)
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "i686-redhat-linux-gnu".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from /usr/local/bin/gpk-update-viewer...done.
(gdb) run
Starting program: /usr/local/bin/gpk-update-viewer 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/libthread_db.so.1".
[New Thread 0xb6622b40 (LWP 9278)]
[New Thread 0xb5cd5b40 (LWP 9279)]
[New Thread 0xb52ffb40 (LWP 9280)]

Program received signal SIGSEGV, Segmentation fault.
0x08052f0c in gpk_update_viewer_reconsider_info () at gpk-update-viewer.c:1462
1462		len = update_array->len;
(gdb) thread apply all bt

Thread 1 (Thread 0xb69d0880 (LWP 9275))

  • #0 gpk_update_viewer_reconsider_info
    at gpk-update-viewer.c line 1462
  • #1 gpk_update_viewer_get_distro_upgrades_cb
    at gpk-update-viewer.c line 3152
  • #2 g_simple_async_result_complete
    at gsimpleasyncresult.c line 767
  • #3 complete_in_idle_cb
    at gsimpleasyncresult.c line 779
  • #4 g_idle_dispatch
    at gmain.c line 4657
  • #5 g_main_dispatch
    at gmain.c line 2539
  • #6 g_main_context_dispatch
    at gmain.c line 3075
  • #7 g_main_context_iterate
    at gmain.c line 3146
  • #8 g_main_context_iteration
    at gmain.c line 3207
  • #9 g_application_run
    at gapplication.c line 1499
  • #10 main
    at gpk-update-viewer.c line 3466

Comment 3 Michael Catanzaro 2013-07-27 02:26:45 UTC
(In reply to comment #1)
> commit a547582193fcee431786a73c3967411b98fd9bde
> Author: Richard Hughes <richard@hughsie.com>
> Date:   Fri Oct 5 22:38:35 2012 +0100
> 
>     Fix a segfault when there is a distribution upgrade available
> 
>     Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=685579