Fix a segfault when there is a distribution upgrade available

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=685579